--- a/junior-career.html
+++ b/junior-career.html
@@ -381,7 +381,7 @@
     </div>
   </div>
 
-  <div style="margin-bottom: 50px;">
+<div style="margin-bottom: 50px;">
 <h3 style="font-size: 20px; color: #1b5e20; margin-bottom: 20px; display: flex; align-items: center; font-weight: 800;">
   <div style="margin-right: 12px; display: flex; align-items: center; justify-content: center; background: #f0fdf4; width: 36px; height: 36px; border-radius: 10px; border: 1px solid #dcfce7;">
     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#1b5e20" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round">
@@ -397,27 +397,48 @@
 </h3>
     
     <h4 style="color: #1b5e20; border-bottom: 2px solid #1b5e20; padding-bottom: 5px; margin-bottom: 15px;">Season 2025</h4>
-    <div class="table-container" style="overflow-x: auto; margin-bottom: 30px;">
-      <table style="width: 100%; min-width: 500px; border-collapse: collapse; font-size: 14px; box-shadow: 0 2px 5px rgba(0,0,0,0.05);">
-        <tr style="background: #1b5e20; color: white; font-weight: bold;"><td style="padding: 12px;">Date</td><td>Tournament</td><td>Category</td><td>Score</td><td>Result</td></tr>
-        <tr style="border-bottom: 1px solid #eee;"><td style="padding: 12px;">May 1–4</td><td>INTERZONAS (WAGR)</td><td>National</td><td style="color:#d32f2f; font-weight: bold;">215 (−1)</td><td style="font-weight: bold; color: #1b5e20;">1st</td></tr>
-        <tr style="border-bottom: 1px solid #eee; background: #fcfcfc;"><td style="padding: 12px;">Apr 3–6</td><td>6th Stage Zona Centro</td><td>Jr./Univ.</td><td>224 (+8)</td><td style="font-weight: bold; color: #1b5e20;">1st</td></tr>
-        <tr style="border-bottom: 1px solid #eee;"><td style="padding: 12px;">Feb 27</td><td>5th Stage Zona Centro</td><td>Jr./Univ.</td><td style="color:#d32f2f; font-weight: bold;">211 (−5)</td><td style="font-weight: bold; color: #1b5e20;">1st</td></tr>
-        <tr style="border-bottom: 1px solid #eee; background: #fcfcfc;"><td style="padding: 12px;">Feb 6–9</td><td>4th Stage Zona Centro</td><td>Jr./Univ.</td><td style="color:#d32f2f; font-weight: bold;">200 (−16)</td><td style="font-weight: bold; color: #1b5e20;">1st</td></tr>
-        <tr style="border-bottom: 1px solid #eee;"><td style="padding: 12px;">Jan 16</td><td>Copa Sur (WAGR)</td><td>National</td><td style="color:#d32f2f; font-weight: bold;">210 (−6)</td><td style="font-weight: bold; color: #1b5e20;">1st</td></tr>
+    <div class="table-container" style="overflow-x: hidden; margin-bottom: 30px;">
+      <table style="width: 100%; border-collapse: collapse; font-size: 12px; box-shadow: 0 2px 5px rgba(0,0,0,0.05); table-layout: fixed;">
+        <thead>
+          <tr style="background: #1b5e20; color: white; font-weight: bold;">
+            <td style="padding: 10px 4px; width: 20%;">Date</td>
+            <td style="padding: 10px 4px; width: 35%;">Tournament</td>
+            <td style="padding: 10px 4px; width: 18%;">Category</td>
+            <td style="padding: 10px 4px; width: 17%;">Score</td>
+            <td style="padding: 10px 4px; width: 10%;">Result</td>
+          </tr>
+        </thead>
+        <tbody>
+          <tr style="border-bottom: 1px solid #eee;"><td style="padding: 10px 4px;">May 1–4</td><td style="padding: 10px 4px;">INTERZONAS (WAGR)</td><td style="padding: 10px 4px;">National</td><td style="padding: 10px 4px; color:#d32f2f; font-weight: bold;">215 (−1)</td><td style="padding: 10px 4px; font-weight: bold; color: #1b5e20;">1st</td></tr>
+          <tr style="border-bottom: 1px solid #eee; background: #fcfcfc;"><td style="padding: 10px 4px;">Apr 3–6</td><td style="padding: 10px 4px;">6th Stage Zona Centro</td><td style="padding: 10px 4px;">Jr./Univ.</td><td style="padding: 10px 4px;">224 (+8)</td><td style="padding: 10px 4px; font-weight: bold; color: #1b5e20;">1st</td></tr>
+          <tr style="border-bottom: 1px solid #eee;"><td style="padding: 10px 4px;">Feb 27</td><td style="padding: 10px 4px;">5th Stage Zona Centro</td><td style="padding: 10px 4px;">Jr./Univ.</td><td style="padding: 10px 4px; color:#d32f2f; font-weight: bold;">211 (−5)</td><td style="padding: 10px 4px; font-weight: bold; color: #1b5e20;">1st</td></tr>
+          <tr style="border-bottom: 1px solid #eee; background: #fcfcfc;"><td style="padding: 10px 4px;">Feb 6–9</td><td style="padding: 10px 4px;">4th Stage Zona Centro</td><td style="padding: 10px 4px;">Jr./Univ.</td><td style="padding: 10px 4px; color:#d32f2f; font-weight: bold;">200 (−16)</td><td style="padding: 10px 4px; font-weight: bold; color: #1b5e20;">1st</td></tr>
+          <tr style="border-bottom: 1px solid #eee;"><td style="padding: 10px 4px;">Jan 16</td><td style="padding: 10px 4px;">Copa Sur (WAGR)</td><td style="padding: 10px 4px;">National</td><td style="padding: 10px 4px; color:#d32f2f; font-weight: bold;">210 (−6)</td><td style="padding: 10px 4px; font-weight: bold; color: #1b5e20;">1st</td></tr>
+        </tbody>
       </table>
     </div>
 
     <h4 style="color: #1b5e20; border-bottom: 2px solid #1b5e20; padding-bottom: 5px; margin-bottom: 15px;">Season 2024</h4>
-    <div class="table-container" style="overflow-x: auto; margin-bottom: 30px;">
-      <table style="width: 100%; min-width: 500px; border-collapse: collapse; font-size: 14px; box-shadow: 0 2px 5px rgba(0,0,0,0.05);">
-        <tr style="border-bottom: 1px solid #eee;"><td style="padding: 12px; width: 25%;">Nov 28</td><td style="width: 45%;">3rd Stage Zona Centro (WAGR)</td><td style="width: 20%; color:#d32f2f; font-weight: bold;">211 (−5)</td><td style="font-weight: bold; width: 10%; color: #1b5e20;">1st</td></tr>
-        <tr style="border-bottom: 1px solid #eee; background: #fcfcfc;"><td style="padding: 12px;">Oct 31</td><td>Copa Pacífico (WAGR)</td><td style="color:#d32f2f; font-weight: bold;">206 (−10)</td><td style="font-weight: bold; color: #1b5e20;">1st</td></tr>
-        <tr style="border-bottom: 1px solid #eee;"><td style="padding: 12px;">Oct 17</td><td>2nd Stage Zona Centro (WAGR)</td><td style="color:#d32f2f; font-weight: bold;">213 (−3)</td><td style="font-weight: bold; color: #1b5e20;">1st</td></tr>
-        <tr style="border-bottom: 1px solid #eee; background: #fcfcfc;"><td style="padding: 12px;">Sep 26</td><td>Copa Centro (WAGR)</td><td style="color:#d32f2f; font-weight: bold;">203 (−13)</td><td style="font-weight: bold; color: #1b5e20;">1st</td></tr>
-        <tr style="border-bottom: 1px solid #eee;"><td style="padding: 12px;">Sep 6</td><td>1st Stage Zona Centro</td><td style="color:#d32f2f; font-weight: bold;">135 (−9)</td><td style="font-weight: bold; color: #1b5e20;">1st</td></tr>
+    <div class="table-container" style="overflow-x: hidden; margin-bottom: 30px;">
+      <table style="width: 100%; border-collapse: collapse; font-size: 12px; box-shadow: 0 2px 5px rgba(0,0,0,0.05); table-layout: fixed;">
+        <thead>
+          <tr style="background: #1b5e20; color: white; font-weight: bold;">
+            <td style="padding: 10px 4px; width: 20%;">Date</td>
+            <td style="padding: 10px 4px; width: 53%;">Tournament</td>
+            <td style="padding: 10px 4px; width: 17%;">Score</td>
+            <td style="padding: 10px 4px; width: 10%;">Result</td>
+          </tr>
+        </thead>
+        <tbody>
+          <tr style="border-bottom: 1px solid #eee;"><td style="padding: 10px 4px;">Nov 28</td><td style="padding: 10px 4px;">3rd Stage Zona Centro (WAGR)</td><td style="padding: 10px 4px; color:#d32f2f; font-weight: bold;">211 (−5)</td><td style="padding: 10px 4px; font-weight: bold; color: #1b5e20;">1st</td></tr>
+          <tr style="border-bottom: 1px solid #eee; background: #fcfcfc;"><td style="padding: 10px 4px;">Oct 31</td><td style="padding: 10px 4px;">Copa Pacífico (WAGR)</td><td style="padding: 10px 4px; color:#d32f2f; font-weight: bold;">206 (−10)</td><td style="padding: 10px 4px; font-weight: bold; color: #1b5e20;">1st</td></tr>
+          <tr style="border-bottom: 1px solid #eee;"><td style="padding: 10px 4px;">Oct 17</td><td style="padding: 10px 4px;">2nd Stage Zona Centro (WAGR)</td><td style="padding: 10px 4px; color:#d32f2f; font-weight: bold;">213 (−3)</td><td style="padding: 10px 4px; font-weight: bold; color: #1b5e20;">1st</td></tr>
+          <tr style="border-bottom: 1px solid #eee; background: #fcfcfc;"><td style="padding: 10px 4px;">Sep 26</td><td style="padding: 10px 4px;">Copa Centro (WAGR)</td><td style="padding: 10px 4px; color:#d32f2f; font-weight: bold;">203 (−13)</td><td style="padding: 10px 4px; font-weight: bold; color: #1b5e20;">1st</td></tr>
+          <tr style="border-bottom: 1px solid #eee;"><td style="padding: 10px 4px;">Sep 6</td><td style="padding: 10px 4px;">1st Stage Zona Centro</td><td style="padding: 10px 4px; color:#d32f2f; font-weight: bold;">135 (−9)</td><td style="padding: 10px 4px; font-weight: bold; color: #1b5e20;">1st</td></tr>
+        </tbody>
       </table>
     </div>
+  </div>
 
     <h4 style="color: #555; border-bottom: 1px solid #ddd; padding-bottom: 5px;">2019–2023 Highlights</h4>
     <ul style="font-size: 14px; line-height: 2.2; color: #333; padding-left: 20px;">
