--- a/index.html
+++ b/index.html
@@ -367,16 +367,16 @@
     </div>
   </div>
 
-  <a href="./ncaa-stats.html#current-focus" style="text-decoration: none; display: block;">
+<a href="./ncaa-stats.html#current-focus" style="text-decoration: none; display: block;">
     <div class="focus-container">
       <div class="focus-content">
         <div class="focus-badge">
           <span class="focus-pulse"></span>
           Current Focus
         </div>
-        <div class="focus-text-wrapper" title="Recalibrating putting touch & driver alignment for Cancun (Travel Squad).">
+        <div class="focus-text-wrapper" title="Adjusting physical feel post-hiatus. Technical verification for Spring season opening.">
           <span class="focus-text">
-            Recalibrating putting touch & driver alignment for Cancun (Travel Squad).
+            Adjusting physical feel post-hiatus. Technical verification for Spring season opening.
           </span>
         </div>
       </div>
