--- a/index.html
+++ b/index.html
@@ -804,7 +804,7 @@
   </div>
   <b style="color: #0c2340; font-size: 16px; font-weight: 800; text-transform: uppercase; letter-spacing: 0.5px;">Family Support</b>
 </div>
-        <p style="font-size: 14.5px; line-height: 1.7; color: #444; margin: 0;">
+<p style="font-size: 14.5px; line-height: 1.7; color: #444; margin: 0;">
           Raised with the support of his parents and grandmother, Joshua has two older siblings—both <b>medical students</b>. His family environment has emphasized <b>discipline, responsibility, and long-term commitment</b> throughout his development.
         </p>
       </div>
@@ -864,13 +864,13 @@
     </div>
   </div>
 
-      <div style="text-align: center;">
+    <div style="text-align: center;">
     <div style="margin-bottom: 35px;">
       <h2 style="font-size: clamp(20px, 5vw, 26px); color: #0c2340; font-weight: 900; margin: 0; line-height: 1.3;">
         Billy Dettlaff Sportsmanship Award
       </h2>
       <p style="font-size: 18px; color: #c98a2e; margin: 8px 0 0 0; font-weight: 600;">
-        at The Junior Players Championship (TPC Sawgrass)
+        The Junior Players Championship – TPC Sawgrass
       </p>
       <div style="width: 60px; height: 3px; background: #c98a2e; margin: 15px auto 0;"></div>
     </div>
@@ -882,7 +882,7 @@
           <div style="position: absolute; top: 15px; left: 15px; background: #c98a2e; color: white; padding: 6px 12px; border-radius: 8px; font-size: 12px; font-weight: 800; letter-spacing: 1px; box-shadow: 0 4px 8px rgba(0,0,0,0.2);">HONOR</div>
         </div>
         <p style="margin: 0; font-size: 15px; color: #455a64; line-height: 1.7; font-weight: 500;">
-          Recognizing Joshua's <b>exceptional character, integrity</b>, and profound respect for the game of golf.
+          Joshua Hong received the <b>Billy Dettlaff Sportsmanship Award</b>, recognized for conduct and sportsmanship observed throughout the event.
         </p>
       </div>
 
@@ -892,7 +892,7 @@
           <div style="position: absolute; top: 15px; left: 15px; background: #0c2340; color: white; padding: 6px 12px; border-radius: 8px; font-size: 12px; font-weight: 800; letter-spacing: 1px; box-shadow: 0 4px 8px rgba(0,0,0,0.2);">THE JR. PLAYERS</div>
         </div>
         <p style="margin: 0; font-size: 15px; color: #455a64; line-height: 1.7; font-weight: 500;">
-          An elite-level invitation to <b>TPC Sawgrass</b>, competing among the world's most promising junior golfers.
+          Presented to a player who demonstrates <b>sportsmanship and respect for the game</b> during the championship held at TPC Sawgrass.
         </p>
       </div>
     </div>
@@ -996,8 +996,8 @@
   <h3 style="margin: 0; color: #5f6368; font-size: 13px; text-transform: uppercase; letter-spacing: 2px; font-weight: 700;">AI-Powered Profile Overview</h3>
 </div>
     
-    <div style="font-size: 16px; color: #3c4043; line-height: 1.8; border-left: 5px solid #0c2340; padding: 25px; background-color: #f8fafc; border-radius: 0 15px 15px 0; text-align: justify; word-break: keep-all;">
-      "Joshua Hong is a <b>Two-Time National Junior Champion</b> and a strategic asset for the UTSA program. His unique <b>Korean-Mexican heritage</b>, combined with an elite work ethic and a transition from high-performance sports to golf dominance, <b>positions him as a reliable and disciplined student-athlete within a structured collegiate environment.</b>"
+<div style="font-size: 16px; color: #3c4043; line-height: 1.8; border-left: 5px solid #0c2340; padding: 25px; background-color: #f8fafc; border-radius: 0 15px 15px 0; text-align: justify; word-break: keep-all;">
+      "Joshua Hong is a <b>Two-Time National Junior Champion</b> and a member of the UTSA Men’s Golf program. With a <b>Korean-Mexican background</b>, he transitioned to competitive golf after participating in other high-performance sports. His development has followed a <b>structured training and competition pathway</b> within the collegiate golf environment."
     </div>
 
     <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(160px, 1fr)); gap: 12px; margin-top: 30px;">
