--- a/index.html
+++ b/index.html
@@ -805,8 +805,8 @@
   <b style="color: #0c2340; font-size: 16px; font-weight: 800; text-transform: uppercase; letter-spacing: 0.5px;">Family Support</b>
 </div>
 <p style="font-size: 14.5px; line-height: 1.7; color: #444; margin: 0;">
-          Raised with the support of his parents and grandmother, Joshua has two older siblings—both <b>medical students</b>. His family environment has emphasized <b>discipline, responsibility, and long-term commitment</b> throughout his development.
-        </p>
+  Raised with the support of his parents and grandmother, Joshua has two older siblings. His family environment has emphasized <b>discipline, responsibility, and long-term commitment</b> throughout his development.
+</p>
       </div>
 
       <div style="background: #f4f7f9; padding: 25px; border-radius: 20px; border: 1px solid #d1d9e0; box-sizing: border-box; transition: all 0.3s ease;">
