--- a/index.html
+++ b/index.html
@@ -997,7 +997,7 @@
 </div>
     
 <div style="font-size: 16px; color: #3c4043; line-height: 1.8; border-left: 5px solid #0c2340; padding: 25px; background-color: #f8fafc; border-radius: 0 15px 15px 0; text-align: justify; word-break: keep-all;">
-      "Joshua Hong is a <b>Two-Time National Junior Champion</b> and a member of the UTSA Men’s Golf program. With a <b>Korean-Mexican background</b>, he transitioned to competitive golf after participating in other high-performance sports. His development has followed a <b>structured training and competition pathway</b> within the collegiate golf environment."
+      "Joshua Hong won the <b>FMG National Junior Championship in Mexico in back-to-back years</b>, a result that had not previously occurred in the championship’s history. He is a member of the <b>UTSA Men’s Golf program</b>. With a <b>Korean-Mexican background</b>, Joshua transitioned to competitive golf after participating in other high-performance sports. His <b>athletic development</b> has followed a <b>structured training and competition pathway</b> within the collegiate golf environment."
     </div>
 
     <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(160px, 1fr)); gap: 12px; margin-top: 30px;">
