--- a/index.html
+++ b/index.html
@@ -820,9 +820,9 @@
   </div>
   <b style="color: #0c2340; font-size: 16px; font-weight: 800; text-transform: uppercase; letter-spacing: 0.5px;">Multi-Sport Background</b>
 </div>
-        <p style="font-size: 14.5px; line-height: 1.7; color: #444; margin: 0;">
-          Before golf, he competed in <b>High-Performance Tennis</b> (from age 7) and <b>Baseball</b> (ages 11–12), building the exceptional coordination and athleticism that fueled his rapid rise in the golf world.
-        </p>
+<p style="font-size: 14.5px; line-height: 1.7; color: #444; margin: 0;">
+  Prior to golf, Joshua competed in <b>high-performance tennis</b> beginning at age 7 and <b>baseball</b> between the ages of 11 and 12. His early athletic experience included participation in <b>organized training and competition</b> across multiple sports before transitioning to golf.
+</p>
       </div>
 
     </div>
