--- a/index.html
+++ b/index.html
@@ -628,11 +628,11 @@
           <h3 style="font-size: 22px; color: #94a3b8; margin: 0; font-weight: 800;">Performance Archive</h3>
         </div>
 
-        <div style="font-size: 14px; line-height: 1.7; color: #efefef; border-left: 4px solid #94a3b8; padding-left: 25px; font-style: italic;">
+     <div style="font-size: 14px; line-height: 1.7; color: #efefef; border-left: 4px solid #94a3b8; padding-left: 25px; font-style: italic;">
           <p style="margin: 0 0 18px 0; color: #fff; font-weight: 700; font-style: normal; font-size: 17px;">Fall Review & Strategic Focus </p>
-          <p style="margin-bottom: 18px;">The Patriot All-America provided a clear benchmark against one of the strongest amateur fields in the country. Following the event, Joshua conducted a technical review, which identified <strong>long-iron precision</strong> as a key area requiring immediate improvement to compete consistently at the NCAA level.</p>
-          <p style="margin-bottom: 18px;">In coordination with the UTSA coaching staff, a short-term adjustment was approved to prioritize an <strong>intensive training block during January</strong>. This decision was made with a single objective: to return fully prepared for qualifying rounds and contribute more effectively to the team’s performance during the Spring season.</p>
-          <p style="margin-bottom: 0;">Joshua is grateful to the UTSA staff for their trust and collaboration, and he remains fully committed to translating this focused work into measurable results that elevate the team’s standing.</p>
+          <p style="margin-bottom: 18px;">The Patriot All-America Invitational served as a competitive reference point against a national amateur field, including several of the top collegiate players. Following the event, a technical review identified <strong>long-iron performance</strong> as an area for improvement ahead of Spring qualifying.</p>
+          <p style="margin-bottom: 18px;">In coordination with the UTSA coaching staff, a short-term adjustment was approved for Joshua to remain on campus and continue individual training during January rather than participate in the scheduled team trip.</p>
+          <p style="margin-bottom: 0;">This period was used to address identified technical areas prior to Spring qualifying rounds and subsequent team events. Joshua continues preparation within the UTSA program for the Spring season.</p>
         </div>
       </div>
 
