--- a/index.html
+++ b/index.html
@@ -603,11 +603,11 @@
           </span>
         </div>
 
-        <div style="font-size: 15px; line-height: 1.7; color: #efefef; border-left: 4px solid #c98a2e; padding-left: 25px;">
+       <div style="font-size: 15px; line-height: 1.7; color: #efefef; border-left: 4px solid #c98a2e; padding-left: 25px;">
           <p style="margin: 0 0 15px 0; color: #c98a2e; font-weight: 700; font-size: 17px;">Winter Preparation & Spring Outlook</p>
-          <p style="margin-bottom: 15px;">January training was <strong>strategically focused</strong> on tightening long-iron dispersion and increasing short-game consistency. This technical block aimed to stabilize mid-to-long range scoring opportunities.</p>
-          <p style="margin-bottom: 15px;">Initial performance during the Jan 22-23 qualifying rounds (R1-R2) demonstrated improved ball-striking stability under competitive pressure. Technical refinement remains ongoing to maintain this consistency across all four rounds.</p>
-          <p style="margin-bottom: 0; color: #fff; font-weight: 600;">The objective for the Spring season is to maintain a high level of competitive readiness and consistently contribute to the team’s overall performance in every tournament.</p>
+          <p style="margin-bottom: 15px;">January training focused on <strong>long-iron dispersion and short-game execution</strong>. During the January 22–23 qualifying rounds (R1–R2), performance reflected the technical areas addressed during the training period.</p>
+          <p style="margin-bottom: 15px;">Preparation continued within the UTSA program framework. During Round 3, <strong>aggressive shot selection</strong> was used to evaluate driver performance and dispersion parameters under expanded margin conditions on the Oaks Course, providing data for technical calibration ahead of Spring competition.</p>
+          <p style="margin-bottom: 0; color: #fff; font-weight: 600;">On January 29, an intensive training session was conducted at <strong>TPC San Antonio</strong>, with emphasis on short-game execution and driver alignment to re-establish performance parameters observed during R1–R2 qualifying rounds.</p>
         </div>
       </div>
 
