--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <head>
 
 <link rel="icon" type="image/jpeg" href="https://raw.githubusercontent.com/joshuahayoung/joshua-golf-official/main/images/joshua-hong-logo.jpg" sizes="32x32">
-<link rel="shortcut icon" href="https://raw.githubusercontent.com/joshuahayoung/joshua-golf-official/main/images/joshua-hong-logo.jpg">
-<link rel="apple-touch-icon" href="https://raw.githubusercontent.com/joshuahayoung/joshua-golf-official/main/images/joshua-hong-logo.jpg">
+  <link rel="shortcut icon" href="https://raw.githubusercontent.com/joshuahayoung/joshua-golf-official/main/images/joshua-hong-logo.jpg">
+  <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/joshuahayoung/joshua-golf-official/main/images/joshua-hong-logo.jpg">
+  
+  <title>Joshua Hong Golf | Official Site | UTSA Men's Golf Athlete</title>
+  <meta name="description" content="Official athlete profile of Joshua Hong, representing the University of Texas at San Antonio (UTSA) Men's Golf. Access tournament results, NCAA performance stats, and latest media coverage.">
+  <link rel="canonical" href="https://www.joshuahonggolf.com/">
+  
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-H1JW8YBDZ8"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
