--- a/reference-links.html
+++ b/reference-links.html
@@ -1,7 +1,13 @@
 <head>
+
 <link rel="icon" type="image/jpeg" href="https://raw.githubusercontent.com/joshuahayoung/joshua-golf-official/main/images/joshua-hong-logo.jpg" sizes="32x32">
-<link rel="shortcut icon" href="https://raw.githubusercontent.com/joshuahayoung/joshua-golf-official/main/images/joshua-hong-logo.jpg">
-<link rel="apple-touch-icon" href="https://raw.githubusercontent.com/joshuahayoung/joshua-golf-official/main/images/joshua-hong-logo.jpg">
+  <link rel="shortcut icon" href="https://raw.githubusercontent.com/joshuahayoung/joshua-golf-official/main/images/joshua-hong-logo.jpg">
+  <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/joshuahayoung/joshua-golf-official/main/images/joshua-hong-logo.jpg">
+
+  <title>References & Official Links | Joshua Hong Golf | UTSA</title>
+  <meta name="description" content="Official external links and verified references for Joshua Hong. Includes UTSA Men's Golf roster profile, tournament scoring portals, and professional golf associations.">
+  <link rel="canonical" href="https://www.joshuahonggolf.com/reference-links.html">
+  
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-H1JW8YBDZ8"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
