--- a/fall-2025-archive.html
+++ b/fall-2025-archive.html
@@ -1,7 +1,13 @@
 <head>
+
 <link rel="icon" type="image/jpeg" href="https://raw.githubusercontent.com/joshuahayoung/joshua-golf-official/main/images/joshua-hong-logo.jpg" sizes="32x32">
-<link rel="shortcut icon" href="https://raw.githubusercontent.com/joshuahayoung/joshua-golf-official/main/images/joshua-hong-logo.jpg">
-<link rel="apple-touch-icon" href="https://raw.githubusercontent.com/joshuahayoung/joshua-golf-official/main/images/joshua-hong-logo.jpg">
+  <link rel="shortcut icon" href="https://raw.githubusercontent.com/joshuahayoung/joshua-golf-official/main/images/joshua-hong-logo.jpg">
+  <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/joshuahayoung/joshua-golf-official/main/images/joshua-hong-logo.jpg">
+
+  <title>NCAA Statistics & Records | Joshua Hong Golf | UTSA</title>
+  <meta name="description" content="Comprehensive NCAA Division I scoring records and performance analysis for Joshua Hong at UTSA. Detailed tracking of tournament finishes and season-by-season scoring averages.">
+  <link rel="canonical" href="https://www.joshuahonggolf.com/ncaa-stats.html">
+  
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-H1JW8YBDZ8"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
