--- a/junior-career.html
+++ b/junior-career.html
@@ -4,8 +4,8 @@
   <link rel="shortcut icon" href="https://raw.githubusercontent.com/joshuahayoung/joshua-golf-official/main/images/joshua-hong-logo.jpg">
   <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/joshuahayoung/joshua-golf-official/main/images/joshua-hong-logo.jpg">
 
-  <title>Junior Career Archive | Joshua Hong Golf | Former Rankings & Titles</title>
-  <meta name="description" content="A comprehensive archive of Joshua Hong's junior golf career. Review tournament victories, AJGA rankings, and amateur achievements prior to joining the UTSA Men's Golf program.">
+  <title>Junior Career Archive | Joshua Hong Golf | WAGR, JGS & FMG Records</title>
+  <meta name="description" content="A historical archive of Joshua Hong's junior golf career. Comprehensive record of tournament results, WAGR, JGS, and FMG (Federación Mexicana de Golf) rankings prior to UTSA.">
   <link rel="canonical" href="https://www.joshuahonggolf.com/junior-career.html">
   
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-H1JW8YBDZ8"></script>
