--- a/index.html
+++ b/index.html
@@ -23,52 +23,21 @@
 
   <style>
     /* 1. 기본 설정 */
-    html, body {
-      margin: 0; padding: 0; width: 100%; overflow-x: hidden; 
-      font-family: 'Montserrat', sans-serif;
-      font-weight: 300;
-    }
+    html, body { margin: 0; padding: 0; width: 100%; overflow-x: hidden; font-family: 'Montserrat', sans-serif; font-weight: 300; }
     * { box-sizing: border-box; }
 
     /* [상단 헤더 기본 스타일] */
-    .sticky-top {
-      position: absolute; top: 0; left: 0; z-index: 1000; width: 100%;
-      background: #ffffff; box-shadow: 0 2px 10px rgba(0,0,0,0.05);
-      /* 우아한 등장을 위한 트랜지션 설정 */
-      transition: transform 0.4s ease-in-out, opacity 0.4s ease-in-out, visibility 0.4s;
-    }
+    .sticky-top { position: absolute; top: 0; left: 0; z-index: 1000; width: 100%; background: #ffffff; box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+      /* 우아한 등장을 위한 트랜지션 설정 */ transition: transform 0.4s ease-in-out, opacity 0.4s ease-in-out, visibility 0.4s; }
 
-    /* 스크롤 시 내려와 고정되는 상태 */
-    .sticky-top.scrolled {
-      position: fixed;
-      top: 0;
-      transform: translateY(0);
-      opacity: 1;
-      visibility: visible;
-      background: rgba(255, 255, 255, 0.98);
-    }
+    /* 스크롤 시 내려와 고정되는 상태 */ .sticky-top.scrolled { position: fixed; top: 0; transform: translateY(0); opacity: 1; visibility: visible;
+      background: rgba(255, 255, 255, 0.98); }
 
-    /* 위로 올라갈 때 '스르르륵' 사라지는 준비 상태 */
-    .sticky-top.preparing {
-      position: fixed;
-      top: 0;
-      transform: translateY(-100%);
-      opacity: 0;
-      visibility: hidden;
-    }
+    /* 위로 올라갈 때 '스르르륵' 사라지는 준비 상태 */ .sticky-top.preparing { position: fixed; top: 0; transform: translateY(-100%); opacity: 0; visibility: hidden; }
 
-    .top-bar {
-      background-color: #F15A22; color: white; text-align: center;
-      padding: 10px 0; font-size: 11px;
-      font-family: 'Oswald', sans-serif; letter-spacing: 1.5px;
-      font-weight: 400;
-    }
+    .top-bar { background-color: #F15A22; color: white; text-align: center;  padding: 10px 0; font-size: 11px; font-family: 'Oswald', sans-serif; letter-spacing: 1.5px; font-weight: 400; }
 
-    /* 헤더 래퍼 */
-    .header-wrapper {
-      display: flex; align-items: center; justify-content: space-between;
-      padding: 0 40px; height: 80px;
-    }
+    /* 헤더 래퍼 */     .header-wrapper { display: flex; align-items: center; justify-content: space-between; padding: 0 40px; height: 80px; }
 
     /* 로고 영역 */
     .logo-area { display: flex; align-items: center; text-decoration: none; color: #333; }
@@ -239,107 +208,31 @@
 
 <div style="max-width: 900px; margin: 0 auto 30px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
   <style>
-    @keyframes pulse {
-      0% { opacity: 1; transform: scale(1); }
-      50% { opacity: 0.3; transform: scale(0.8); }
-      100% { opacity: 1; transform: scale(1); }
-    }
+    @keyframes pulse {  0% { opacity: 1; transform: scale(1); }       50% { opacity: 0.3; transform: scale(0.8); }       100% { opacity: 1; transform: scale(1); }    }
     .status-dot { width: 6px; height: 6px; background-color: #ffffff; border-radius: 50%; display: inline-block; animation: pulse 2s infinite ease-in-out; }
     
     /* 두 카드의 공통 스타일 적용 */
-    .activity-card, .focus-container {
-      background: #ffffff;
-      border: 2px solid #0c2340; /* 테두리 두께와 색상 통일 */
-      border-radius: 12px;
-      overflow: hidden; 
-      box-shadow: 0 8px 20px rgba(12, 35, 64, 0.06);
-      transition: all 0.2s;
-    }
+    .activity-card, .focus-container { background: #ffffff; border: 2px solid #0c2340; 
+    /* 테두리 두께와 색상 통일 */ border-radius: 12px; overflow: hidden; box-shadow: 0 8px 20px rgba(12, 35, 64, 0.06); transition: all 0.2s; }
 
-    .activity-card {
-      margin-bottom: 15px; /* 카드 사이 간격 최적화 */
-    }
+    .activity-card { margin-bottom: 15px; /* 카드 사이 간격 최적화 */ }
+    .icon-link { display: flex; align-items: center; gap: 8px; text-decoration: none; transition: 0.2s; }
+    .focus-container { padding: 15px 20px; /* 상단 카드와 여백 통일 */ display: flex; align-items: center; justify-content: space-between;}
+    .focus-content { display: flex; align-items: center; gap: 16px; overflow: hidden; flex: 1; }
+    .focus-badge { background: #0c2340; color: #ffffff; padding: 5px 12px; border-radius: 6px; font-size: 10px; font-weight: 800; letter-spacing: 0.5px; text-transform: uppercase;
+      white-space: nowrap; display: flex; align-items: center; gap: 8px; }
+    .focus-text-wrapper { overflow: hidden; text-overflow: ellipsis; white-space: nowrap; flex: 1; }
+    .focus-text { color: #475569; font-size: 14px; font-weight: 700; line-height: 1.4; }
+    .focus-arrow-svg { padding-left: 15px; display: flex; align-items: center; }
+    .focus-pulse { width: 6px; height: 6px; background: #10b981; border-radius: 50%; animation: soft-pulse 2.5s infinite ease-in-out;  }
 
-    .icon-link {
-      display: flex;
-      align-items: center;
-      gap: 8px;
-      text-decoration: none;
-      transition: 0.2s;
-    }
+    @keyframes soft-pulse { 0% { opacity: 1; transform: scale(1); }  50% { opacity: 0.3; transform: scale(0.8); }  100% { opacity: 1; transform: scale(1); }  }
 
-    .focus-container {
-      padding: 15px 20px; /* 상단 카드와 여백 통일 */
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-    }
-
-    .focus-content {
-      display: flex;
-      align-items: center;
-      gap: 16px;
-      overflow: hidden; 
-      flex: 1;
-    }
-
-    .focus-badge {
-      background: #0c2340;
-      color: #ffffff;
-      padding: 5px 12px;
-      border-radius: 6px;
-      font-size: 10px;
-      font-weight: 800;
-      letter-spacing: 0.5px;
-      text-transform: uppercase;
-      white-space: nowrap;
-      display: flex;
-      align-items: center;
-      gap: 8px;
-    }
-
-    .focus-text-wrapper {
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      flex: 1;
-    }
-
-    .focus-text {
-      color: #475569;
-      font-size: 14px;
-      font-weight: 700;
-      line-height: 1.4;
-    }
-
-    .focus-arrow-svg {
-      padding-left: 15px;
-      display: flex;
-      align-items: center;
-    }
-
-    .focus-pulse {
-      width: 6px;
-      height: 6px;
-      background: #10b981;
-      border-radius: 50%;
-      animation: soft-pulse 2.5s infinite ease-in-out;
-    }
-
-    @keyframes soft-pulse {
-      0% { opacity: 1; transform: scale(1); }
-      50% { opacity: 0.3; transform: scale(0.8); }
-      100% { opacity: 1; transform: scale(1); }
-    }
-
-    @media (max-width: 768px) {
-      .focus-content { flex-direction: column; align-items: flex-start; gap: 10px; }
-      .focus-text-wrapper { white-space: normal; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; }
-      .focus-container { padding: 15px; }
-    }
+    @media (max-width: 768px) { .focus-content { flex-direction: column; align-items: flex-start; gap: 10px; }
+     .focus-text-wrapper { white-space: normal; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; } .focus-container { padding: 15px; } }
   </style>
 
-<div style="margin-bottom: 20px; display: flex; align-items: center; justify-content: center; gap: 15px;">
+<div style="margin-bottom: 10px; display: flex; align-items: center; justify-content: center; gap: 15px;">
   <div style="flex-grow: 1; height: 1px; background: #edf2f7; max-width: 60px;"></div>
   <h2 style="margin: 0; color: #c98a2e; font-size: 13px; font-weight: 800; letter-spacing: 4px; text-transform: uppercase;">
     On-Going Activity
@@ -396,7 +289,8 @@
     </div>
   </a>
 </div>
-
+<br>
+<br>
 
     
     <div style="position: relative; z-index: 2;">
