--- a/index.html
+++ b/index.html
@@ -203,8 +203,6 @@
       UTSA
     </div>
 
-    
-
 
 <div style="max-width: 900px; margin: 0 auto 30px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
   <style>
@@ -234,7 +232,7 @@
 
 <div class="schedule-section" style="max-width: 900px; margin: 0 auto; padding: 0 15px; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
   
-  <div style="position: relative; text-align: center; margin-bottom: 40px; padding: 20px 0;">
+  <div style="position: relative; text-align: center; margin-bottom: 20px; padding: 10px 0; overflow: hidden;">
     <div style="position: relative; z-index: 2;">
       <h2 style="font-size: clamp(20px, 5vw, 28px); color: #c98a2e; margin: 0; font-weight: 800; display: inline-block;">
         On-Going Activity
