--- a/index.html
+++ b/index.html
@@ -203,14 +203,7 @@
       UTSA
     </div>
 
-    <div style="position: relative; z-index: 2;">
-      <h2 style="font-size: clamp(20px, 5vw, 28px); color: #c98a2e; margin: 0; font-weight: 800; display: inline-block;">
-        On-Going Activity
-      </h2>
-      <span style="display: block; width: 80px; height: 4px; background: #c98a2e; margin: 12px auto 0; border-radius: 2px;"></span>
-    </div>
-  </div>
-
+<div style="max-width: 900px; margin: 0 auto 30px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
   <style>
     @keyframes pulse {  0% { opacity: 1; transform: scale(1); }       50% { opacity: 0.3; transform: scale(0.8); }       100% { opacity: 1; transform: scale(1); }    }
     .status-dot { width: 6px; height: 6px; background-color: #ffffff; border-radius: 50%; display: inline-block; animation: pulse 2s infinite ease-in-out; }
@@ -236,6 +229,39 @@
      .focus-text-wrapper { white-space: normal; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; } .focus-container { padding: 15px; } }
   </style>
 
+<div class="schedule-section" style="max-width: 900px; margin: 0 auto; padding: 0 15px; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+  
+  <div style="position: relative; text-align: center; margin-bottom: 20px; padding: 10px 0; overflow: hidden;">
+    <div style="position: relative; z-index: 2;">
+      <h2 style="font-size: clamp(20px, 5vw, 28px); color: #c98a2e; margin: 0; font-weight: 800; display: inline-block;">
+        On-Going Activity
+      </h2>
+      <span style="display: block; width: 80px; height: 4px; background: #c98a2e; margin: 12px auto 0; border-radius: 2px;"></span>
+    </div>
+  </div>
+
+  <style>
+    @keyframes pulse {  0% { opacity: 1; transform: scale(1); }       50% { opacity: 0.3; transform: scale(0.8); }       100% { opacity: 1; transform: scale(1); }    }
+    .status-dot { width: 6px; height: 6px; background-color: #ffffff; border-radius: 50%; display: inline-block; animation: pulse 2s infinite ease-in-out; }
+    
+    .activity-card, .focus-container { background: #ffffff; border: 2px solid #0c2340; border-radius: 12px; overflow: hidden; box-shadow: 0 8px 20px rgba(12, 35, 64, 0.06); transition: all 0.2s; }
+
+    .activity-card { margin-bottom: 5px; }
+    .icon-link { display: flex; align-items: center; gap: 8px; text-decoration: none; transition: 0.2s; }
+    .focus-container { padding: 15px 20px; display: flex; align-items: center; justify-content: space-between;}
+    .focus-content { display: flex; align-items: center; gap: 16px; overflow: hidden; flex: 1; }
+    .focus-badge { background: #0c2340; color: #ffffff; padding: 5px 12px; border-radius: 6px; font-size: 10px; font-weight: 800; letter-spacing: 0.5px; text-transform: uppercase; white-space: nowrap; display: flex; align-items: center; gap: 8px; }
+    .focus-text-wrapper { overflow: hidden; text-overflow: ellipsis; white-space: nowrap; flex: 1; }
+    .focus-text { color: #475569; font-size: 14px; font-weight: 700; line-height: 1.4; }
+    .focus-arrow-svg { padding-left: 15px; display: flex; align-items: center; }
+    .focus-pulse { width: 6px; height: 6px; background: #10b981; border-radius: 50%; animation: soft-pulse 2.5s infinite ease-in-out;  }
+
+    @keyframes soft-pulse { 0% { opacity: 1; transform: scale(1); }  50% { opacity: 0.3; transform: scale(0.8); }  100% { opacity: 1; transform: scale(1); }  }
+
+    @media (max-width: 768px) { .focus-content { flex-direction: column; align-items: flex-start; gap: 10px; }
+     .focus-text-wrapper { white-space: normal; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; } .focus-container { padding: 15px; } }
+  </style>
+</div>
   <div class="activity-card">
     <div style="padding: 15px 20px; display: flex; align-items: center; justify-content: space-between; flex-wrap: wrap; gap: 15px;">
       <div style="display: flex; align-items: center; gap: 15px;">
@@ -262,7 +288,6 @@
       </a>
     </div>
   </div>
-</div>
   
 
 
