--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
     </p>
   </div>
 
-<div style="margin-bottom: 25px; border-radius: 20px; overflow: hidden; box-shadow: 0 15px 35px rgba(0,0,0,0.15); background-color: #f8f8f8; position: relative;">
+<div style="margin-bottom: 40px; border-radius: 20px; overflow: hidden; box-shadow: 0 15px 35px rgba(0,0,0,0.15); background-color: #f8f8f8; position: relative;">
     <a href="https://drive.google.com/uc?export=view&id=1laJtS3I1EaKcYR5U1Hk0KM-2lG1tRdfI" target="_blank" style="display:block; text-decoration: none;">
       <img src="https://drive.google.com/thumbnail?id=1laJtS3I1EaKcYR5U1Hk0KM-2lG1tRdfI&sz=w1200" 
            style="width: 100%; display: block; object-fit: cover; aspect-ratio: 16 / 9; object-position: center 20%;" 
@@ -228,12 +228,12 @@
 
 <div class="schedule-section" style="max-width: 900px; margin: 0 auto; padding: 0 15px; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
   
-  <div style="position: relative; text-align: center; margin-bottom: 20px; padding: 10px 0; overflow: hidden;">
+  <div style="position: relative; text-align: center; margin-bottom: 30px; padding: 0; overflow: hidden;">
     <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); font-size: clamp(40px, 10vw, 80px); font-weight: 900; color: rgba(12, 35, 64, 0.04); white-space: nowrap; z-index: 1; pointer-events: none; letter-spacing: -2px;">
       UTSA
     </div>
 
-<div style="max-width: 900px; margin: 0 auto 30px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+<div style="max-width: 900px; margin: 0 auto; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
   <style>
     @keyframes pulse {
       0% { opacity: 1; transform: scale(1); }
@@ -335,7 +335,7 @@
     }
   </style>
 
-<div style="margin-bottom: 20px; display: flex; align-items: center; justify-content: center; gap: 15px;">
+<div style="margin-bottom: 25px; display: flex; align-items: center; justify-content: center; gap: 15px; position: relative; z-index: 2;">
   <div style="flex-grow: 1; height: 1px; background: #edf2f7; max-width: 60px;"></div>
   <h2 style="margin: 0; color: #c98a2e; font-size: 13px; font-weight: 800; letter-spacing: 4px; text-transform: uppercase;">
     On-Going Activity
@@ -370,7 +370,7 @@
     </div>
   </div>
 
-<a href="./ncaa-stats.html#current-focus" style="text-decoration: none; display: block;">
+<a href="./ncaa-stats.html#current-focus" style="text-decoration: none; display: block; margin-bottom: 50px;">
     <div class="focus-container">
       <div class="focus-content">
         <div class="focus-badge">
@@ -394,7 +394,7 @@
 </div>
 
     
-    <div style="position: relative; text-align: center; margin-bottom: 15px; padding: 10px 0; overflow: hidden;">
+    <div style="position: relative; text-align: center; margin-bottom: 35px; padding: 0; overflow: hidden;">
       <h2 style="font-size: clamp(28px, 5vw, 36px); color: #0c2340; margin: 0; font-weight: 800; display: inline-block;">
         Schedule <span style="font-weight: 300; color: #777;">&</span> Results
       </h2>
@@ -402,7 +402,7 @@
     </div>
   </div>
 
-    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 25px; width: 100%;">
+    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 25px; width: 100%; margin-bottom: 50px;">
     
     <a href="https://scoreboard.clippd.com/tournaments/239018/scoring/team" target="_blank" style="text-decoration: none; display: block; transition: transform 0.3s ease;">
       <div style="background: #ffffff; padding: 30px 25px; border-radius: 24px; border: 1px solid #e1e8ed; box-shadow: 0 15px 35px rgba(0,0,0,0.06); position: relative; overflow: hidden; border-top: 6px solid #c98a2e; height: 100%; box-sizing: border-box;">
