--- a/news-media.html
+++ b/news-media.html
@@ -1,9 +1,9 @@
 <head>
 
-<link rel="icon" type="image/jpeg" href="https://raw.githubusercontent.com/joshuahayoung/joshua-golf-official/main/images/joshua-hong-logo.jpg" sizes="32x32">
-  <link rel="shortcut icon" href="https://raw.githubusercontent.com/joshuahayoung/joshua-golf-official/main/images/joshua-hong-logo.jpg">
-  <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/joshuahayoung/joshua-golf-official/main/images/joshua-hong-logo.jpg">
-
+<link rel="icon" type="image/png" href="https://raw.githubusercontent.com/joshuahayoung/joshua-golf-official/main/images/joshua-hong-logo.png" sizes="32x32">
+<link rel="shortcut icon" href="https://raw.githubusercontent.com/joshuahayoung/joshua-golf-official/main/images/joshua-hong-logo.png">
+<link rel="apple-touch-icon" href="https://raw.githubusercontent.com/joshuahayoung/joshua-golf-official/main/images/joshua-hong-logo.png">
+  
   <title>News & Media Coverage | Joshua Hong Golf | UTSA Athlete</title>
   <meta name="description" content="A collection of official news articles, press releases, and media coverage featuring Joshua Hong's golf career at UTSA and beyond. View latest interviews and tournament highlights.">
   <link rel="canonical" href="https://www.joshuahonggolf.com/news-media.html">
