--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <link rel="shortcut icon" href="https://raw.githubusercontent.com/joshuahayoung/joshua-golf-official/main/images/joshua-hong-logo.png">
 <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/joshuahayoung/joshua-golf-official/main/images/joshua-hong-logo.png">
   
-  <title>Joshua Hong Golf | Official Site | UTSA Men's Golf Athlete</title>
-  <meta name="description" content="Official athlete profile of Joshua Hong, representing the University of Texas at San Antonio (UTSA) Men's Golf. Access tournament results, NCAA performance stats, and latest media coverage.">
-  <link rel="canonical" href="https://www.joshuahonggolf.com/">
+<title>Joshua Hong | NCAA Men’s Golf | Korean–Mexican Athlete at UTSA</title>
+<meta name="description" content="Official website of Joshua Hong. A Korean–Mexican NCAA Division I golfer at UTSA, based in the United States. Track tournament results, performance stats, and his journey in collegiate golf.">
+<link rel="canonical" href="https://www.joshuahonggolf.com/">
   
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-H1JW8YBDZ8"></script>
   <script>
