--- a/index.html
+++ b/index.html
@@ -913,8 +913,8 @@
   
 <div style="background: #ffffff; border-radius: 30px; border: 1px solid #e1e8ed; padding: 40px 25px; text-align: center; box-shadow: 0 15px 35px rgba(0,0,0,0.05); margin-bottom: 40px; box-sizing: border-box; overflow: hidden;">
     
-    <div style="margin-bottom: 10px; min-height: 50px; display: flex; align-items: center; justify-content: center;">
-      <img src="https://lh3.googleusercontent.com/d/1hxNkppI9R10P9NKPKQsf_9ahKehshOuM" style="width: 160px; height: auto; display: block; filter: brightness(0);" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
+<div style="margin-bottom: 10px; min-height: 50px; display: flex; align-items: center; justify-content: center;">
+      <img src="https://lh3.googleusercontent.com/d/1hxNkppI9R10P9NKPKQsf_9ahKehshOuM" alt="Titleist Logo" style="width: 160px; height: auto; display: block; filter: brightness(0);" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
       <div style="display: none; font-family: 'Times New Roman', Times, serif; font-size: 36px; font-weight: bold; color: #000; letter-spacing: -2px; font-style: italic;">Titleist</div>
     </div>
 
@@ -1028,11 +1028,11 @@
   </div>
   <span style="letter-spacing: 0.3px;">SCRBD-Stats</span>
 </a>
-      <a href="https://goutsa.com/sports/mens-golf/roster/player/joshua-hong" target="_blank" style="text-decoration: none; background: #ff5a00; color: white; padding: 14px 5px; border-radius: 12px; text-align: center; font-size: 13px; font-weight: 800; display: flex; align-items: center; justify-content: center; gap: 6px;">
-        <img src="https://www.google.com/s2/favicons?sz=64&domain=goutsa.com" style="width: 18px; height: 18px; border-radius: 2px;"> UTSA-Roster
+<a href="https://goutsa.com/sports/mens-golf/roster/player/joshua-hong" target="_blank" style="text-decoration: none; background: #ff5a00; color: white; padding: 14px 5px; border-radius: 12px; text-align: center; font-size: 13px; font-weight: 800; display: flex; align-items: center; justify-content: center; gap: 6px;">
+        <img src="https://www.google.com/s2/favicons?sz=64&domain=goutsa.com" alt="UTSA Athletics Icon" style="width: 18px; height: 18px; border-radius: 2px;"> UTSA-Roster
       </a>
       <a href="https://goutsa.com/utsa-roadrunners-mens-golf-statistics" target="_blank" style="text-decoration: none; background: #777; color: white; padding: 14px 5px; border-radius: 12px; text-align: center; font-size: 13px; font-weight: 800; display: flex; align-items: center; justify-content: center; gap: 6px;">
-        <img src="https://www.google.com/s2/favicons?sz=64&domain=goutsa.com" style="width: 18px; height: 18px; border-radius: 2px;"> UTSA-Stats
+        <img src="https://www.google.com/s2/favicons?sz=64&domain=goutsa.com" alt="UTSA Stats Icon" style="width: 18px; height: 18px; border-radius: 2px;"> UTSA-Stats
       </a>
     </div>
   </div>
