--- a/news-media.html
+++ b/news-media.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <head>
 
 <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/joshuahayoung/joshua-golf-official/main/images/joshua-hong-logo.png" sizes="32x32">
