--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <title>Joshua Hong | NCAA Men’s Golf | Korean–Mexican Athlete at UTSA</title>
 <meta name="description" content="Official website of Joshua Hong. A Korean–Mexican NCAA Division I golfer at UTSA, based in the United States. Track tournament results, performance stats, and his journey in collegiate golf.">
 <link rel="canonical" href="https://www.joshuahonggolf.com/">
+
+  <meta http-equiv="Content-Security-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://www.googletagmanager.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://raw.githubusercontent.com https://lh3.googleusercontent.com https://www.google.com;">
   
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-H1JW8YBDZ8"></script>
   <script>
