--- a/news-media.html
+++ b/news-media.html
@@ -8,6 +8,8 @@
   <title>News & Media Coverage | Joshua Hong Golf | UTSA Athlete</title>
   <meta name="description" content="A collection of official news articles, press releases, and media coverage featuring Joshua Hong's golf career at UTSA and beyond. View latest interviews and tournament highlights.">
   <link rel="canonical" href="https://www.joshuahonggolf.com/news-media.html">
+
+<meta http-equiv="Content-Security-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://www.googletagmanager.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://raw.githubusercontent.com https://lh3.googleusercontent.com https://www.google.com;">
   
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-H1JW8YBDZ8"></script>
   <script>
