--- a/fall-2025-archive.html
+++ b/fall-2025-archive.html
@@ -8,6 +8,8 @@
   <title>NCAA Statistics & Records | Joshua Hong Golf | UTSA</title>
   <meta name="description" content="Comprehensive NCAA Division I scoring records and performance analysis for Joshua Hong at UTSA. Detailed tracking of tournament finishes and season-by-season scoring averages.">
   <link rel="canonical" href="https://www.joshuahonggolf.com/ncaa-stats.html">
+
+<meta http-equiv="Content-Security-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://www.googletagmanager.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://raw.githubusercontent.com https://lh3.googleusercontent.com https://www.google.com;">
   
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-H1JW8YBDZ8"></script>
   <script>
