--- a/reference-links.html
+++ b/reference-links.html
@@ -19,7 +19,7 @@
     gtag('config', 'G-H1JW8YBDZ8');
   </script>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Links | Joshua Hong Golf</title>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
